--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -2,3 +2,12 @@ h3{
   font-family: 'Tangerine', serif;
   font-size: 50px;
 }
+a{
+  font-size: 20px;
+  font-family: sans-serif;
+  padding-right: 20px;
+}
+.modal-content{
+  background-color: seashell;
+  color: black;
+}
