--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1,13 +1,23 @@
-h3{
+h3 {
   font-family: 'Tangerine', serif;
-  font-size: 50px;
+  font-size: 35px;
+  padding-left: 20px;
+  text-align: center;
 }
-a{
+
+a {
   font-size: 20px;
-  font-family: sans-serif;
+  font-family: 'Arsenal';
   padding-right: 20px;
 }
-.modal-content{
-  background-color: seashell;
+
+.modal-content {
+  background-color: mintcream;
   color: black;
+  font-family: 'Arsenal';
+}
+
+.bookDetails {
+  margin-top: 20px;
+  font-weight: bold;
 }
